[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
device_query = "1.1.3"
egui = "0.22.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
rmp = "0.8.11"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["sync", "rt", "rt-multi-thread", "macros"] }
toml = "0.7.4"

[features]
desktop = []
mobile = []
